# jaxsplines

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.py  train_with_inverse.py
jaxsplines/: __init__.py  bspline.py  bspline_helpers.py
jaxsplines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_bspline.py  test_extrapolation.py  test_invert.py  test_monotonic.py  test_monotonic_jax.py
