[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxsplines"
version = "0.1.0"
description = "B-spline implementation in JAX with Equinox for machine learning applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JAXSplines Team"},
]
keywords = ["jax", "splines", "b-splines", "machine learning", "monotonic", "invertible"]
classifiers = []
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.11.0",
    "optax>=0.1.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
]
examples = [
    "matplotlib>=3.0",
    "jupyter",
    "notebook",
]

[project.urls]
Homepage = "https://github.com/username/jaxsplines"
Repository = "https://github.com/username/jaxsplines.git"
Documentation = "https://github.com/username/jaxsplines#readme"
"Bug Tracker" = "https://github.com/username/jaxsplines/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxsplines*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["F821", "F722"]  # Allow JAX typing forward references and syntax

[tool.mypy]
plugins = ["jaxtyping.mypy_plugin"]
ignore_missing_imports = true
disable_error_code = ["misc", "name-defined"] 